added code for the albums collection
